test/classes/initializers/complete-1.good
complete-1.chpl:5: In initializer:
complete-1.chpl:12: error: cannot update a const field, "y", in phase 2
